@@ -2,7 +2,7 @@ smp-utils (0.95-0.1) unstable; urgency=low
 
   * discover changes in spl-r04
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 27 Oct 2009 20:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 16 Nov 2010 21:00:00 -0500
 
 smp-utils (0.94-0.1) unstable; urgency=low
 
